# TRAINING

./: .env.example  .gitignore  3090_SETUP.md  ACCURACY_TRENDS_FEATURE.md  AGENTS.md  ARCHITECTURE.md  BEFORE_AFTER_FIX.txt  CATASTROPHIC_LOSS_POSTMORTEM.md  CHANGELOG.md  CLAUDE.md  CRASH_PREVENTION_GUIDE.md  CRITICAL_EDGE_CASES_AND_GUARDRAILS.md  DEVELOPMENT.md  DISK_SPACE_FIX_COMPLETE.md  DOCS_INDEX.md  DOCS_UPDATED_2025-11-18.md  DOCUMENTATION_CLEANUP_SUMMARY.md  EDGE_CASE_TEST_RESULTS.md  EOS_PENALTY_CONFLICT_FIX.md  GUILD_VOCABULARY.md  HANDOFF_MODULE_CONTRACTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LORE.md  MASTER_REFACTOR_PLAN.md  MODULE_CONTRACTS.md  MONITORING_COSTS_GUIDE.md  OOM_EVAL_FIX_2025-11-22.md  OOM_FIX_SUMMARY.md  OPTION_C_MIGRATION_STATUS.md  PHASE2_MODEL_VERSIONING_COMPLETE.md  PHASE_4_QUICK_REF.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  QUICK_START.md  QUICK_START_INTEGRATED.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md  REMOTE_DEPLOYMENT_PLAN.md  (+110 more)
.githooks/: pre-commit
.pids/: deployment_orchestrator.pid  model_comparison.pid  tavern.pid  zone_warden.pid
GOTCHA_BUSINESS_MODEL/: PACKS.md  PRICING_MODEL.md  PSYCHOLOGY.md  README.md
OBSERVATIONS/: 2025-11-11_training_behavior_hypotheses.md  README.md
PERMANENT_ERROR_TRAINING/: README.md
analysis/: __init__.py  layer_stats.py  model_loader.py  probe_datasets.py  schemas.py
arcana/: __init__.py  __main__.py  engine.py  meta.py  parser.py  planner.py  world.py
archive/: system_prompt.txt
arena/: __init__.py  battle_control.py  battle_log.py  factory.py  hero_loop.py  quest_board.py  types.py
armory/: __init__.py
campaigns/: active
config/: device_mapping.json  devices.example.json  devices.json  hard_examples.json  hosts.example.json  hosts.json  probe_set.json  secrets.json  secrets_loader.py  storage.json  storage_registry.example.json  storage_registry.json  storage_zones.example.json  storage_zones.json  workers.json
configs/: ds_zero2_offload.json  ds_zero3_offload.json  eval_suites.yaml  hero_presets.yaml  passives.yaml  schedule.yaml  schools.yaml  services.json  titles.yaml  training_schools.yaml
control/: active_campaign.json  state.json
core/: __init__.py  atomic_ops.py  battle_log.py  chat_templates.py  checkpoint_ledger.py  cluster_state.py  config_builder.py  custom_collator.py  data_file_impact.py  devices.py  eval_dynamics.py  eval_runner.py  eval_scheduler.py  eval_suite.py  evaluation_ledger.py  event_bus.py  events.py  fleet_version.py  garrison.py  groundskeeper.py  heartbeat.py  hero.py  hosts.py  job.py  job_logger.py  lab.py  lineage.py  lineage_tracker.py  logit_penalty.py  masking_validators.py  model_db.py  momentum.py  output_validator.py  passives.py  paths.py  prompts.py  realm_state.py  realm_store.py  realm_store_schema.py  reset.py  (+17 more)
css/: live_monitor.css
data/: README.md
data_manager/: BINARY_API_USAGE.md  BINARY_CURRICULUM.md  README.md  SKILL_API_CONTRACT.md  __init__.py  api_client.py  curriculum_manager.py  curriculum_state.json  manager.py  quality_checker.py  remote_client.py  remote_evaluator.py  skill_api_client.py
docs/: ADDITIONAL_EDGE_CASES.md  CRITICAL_FIXES.md  CRITICAL_FIXES_COMPLETE_2025-11-16.md  DATA_VALUE_CALCULATOR.md  EDGE_CASES_ANALYSIS.md  EVENT_BUS_ARCHITECTURE.md  FORTUNE_TELLER.md  MERGED_BASE_REFERENCE.md  MODEL_PERSISTENCE_SOLUTION.md  REFACTOR_PLAN.md  SESSION_COMPLETE_FIXES_2025-11-16.md  STATE_TRACKER_GUIDE.md  TRAINING_DATA_CONTRACT.md  TRAINING_IMPROVEMENTS_ROADMAP.md  ULTRATHINK_EDGE_CASES.md  VERBOSE_MODE.md
events/: __init__.py  broadcaster.py  types.py
examples/: fortune_teller_config.json
fleet/: __init__.py  agent.py  controller.py  fleet-agent.service.template  types.py
forge/: __init__.py  contracts.py  gating.py  leakage.py  profiler.py  queue_integration.py  state.py  validator.py
guild/: __init__.py  curriculum_feedback.py  job_dispatcher.py  job_router.py  job_types.py  sparring.py  titles.py  (+8 more)
(+1126 files in other folders)
