[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-training"
version = "0.1.0"
description = "LLM Training Platform for fine-tuning language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Russ", email = "user@example.com"}
]
keywords = ["llm", "training", "fine-tuning", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Light dependencies only - GPU packages moved to [training] extra
    "psutil>=5.9",
    "requests>=2.31",
]

[project.optional-dependencies]
# GPU training dependencies (heavy)
training = [
    "torch>=2.0",
    "transformers>=4.35",
    "datasets>=2.14",
    "accelerate>=0.25",
    "safetensors>=0.4",
]
# Inference server dependencies
inference = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]
# Guild framework dependencies
guild = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
# Full installation (training + inference + dev)
all = [
    "llm-training[training,inference,dev]",
]

[project.scripts]
llm-train = "core.train:main"
llm-daemon = "core.training_daemon:main"
llm-queue = "core.training_queue:main"
llm-controller = "core.training_controller:main"
realm = "training.__main__:main"

[project.urls]
Homepage = "https://github.com/user/llm-training"
Repository = "https://github.com/user/llm-training"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "core*",
    "trainer*",
    "training*",
    "management*",
    "monitoring*",
    "inference*",
    "safety*",
    "tools*",
    "guild*",
    "views*",
]
exclude = [
    "tests*",
    "models*",
    "backups*",
    "logs*",
    "queue*",
    "status*",
    "data*",
    "scratch*",
    "archive*",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.html", "*.css", "*.js"]

# Tool configurations

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU/CUDA (deselect with '-m \"not gpu\"')",
    "integration: marks integration tests that may require external services",
]
# CI command: pytest -m "not slow and not gpu"
# Local full: pytest
# GPU only: pytest -m gpu

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | models
    | backups
    | logs
    | archive
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "models",
    "backups",
    "logs",
    "archive",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["core", "trainer", "management", "monitoring", "inference", "safety", "tools", "guild", "views"]
